# cgsi-gsoap

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  DESCRIPTION  LICENSE  README  RELEASE-NOTES  TODO  VERSION  build.xml  configure  for-2.7.patch  get-platform-os  gsoap-2.6.2-to-2.7.6b.patch  readme.html  readme.html~  setenv23.sh
ci/: fedora-packages.sh
packaging/: Makefile  gfal2-repo-manager.py
packaging/debian/: changelog  control  copyright  libcgsi-gsoap-dev.doc-base  libcgsi-gsoap-dev.install  libcgsi-gsoap1.install  libcgsi-gsoap1.lintian-overrides  rules
packaging/rpm/: CGSI-gSOAP.spec
packaging/rpm/specs/: CGSI-gSOAP.spec
project/: Makefile.etics  build.number  build.properties  configure.properties.xml  e-c_org.glite.security.cgsi-gsoap-2.7.10.ini  e-c_org.glite.security.cgsi-gsoap-2.7.ini  e-c_org.glite.security.cgsi-gsoap.ini  e-m_org.glite.security.cgsi-gsoap-2.7.10.ini  e-m_org.glite.security.cgsi-gsoap-2.7.ini  e-m_org.glite.security.cgsi-gsoap.ini  etics-configuration-template-2.6.ini  etics-configuration-template.ini  glite-security-cgsi-gsoap.spec.template  glite-security-cgsi-gsoap.spec.template.2.7.10  glite-security-cgsi-gsoap.spec.template.etics  properties.xml  version.properties
rpm/: Makefile  cgsi-gsoap.spec
rpm/epel/: CGSI-gSOAP.spec  Makefile
solaris/: Makefile  depend.voms  pkginfo.dev  pkginfo.nonvoms  prototype.nonvoms
src/: CMakeLists.txt  Makefile  cgsi_plugin.c  cgsi_plugin.h  cgsi_plugin_int.h  doxygenConfig  doxygenConfig.footer.html  globus_gsi_gss_constants.h  globus_i_gsi_credential.h  gssapi_openssl.h
test/: Makefile  cgsi-gsoap-client.c  cgsi-gsoap-server.c  cgsi-gsoap-test.wsdl  libtool  shunit  test-client-server.sh
trunk/project/: e-m_org.glite.security.cgsi-gsoap-2.7.ini  glite-security-cgsi-gsoap.spec.template.2.7.10
trunk/rpm/: Makefile
trunk/solaris/: depend.nonvoms  pkginfo.voms  prototype.dev  prototype.voms
trunk/src/: cgsi_plugin.h  doxygenConfig  globus_i_gsi_credential.h
trunk/test/: cgsi-gsoap-client.c  cgsi-gsoap-server.c  cgsi-gsoap-test.wsdl  cgsi-tracefile-with-ascii  libtool  test-client-server.sh
